--- a/tutorials-in-development/R/mdp-download-and-explore.Rmd
+++ b/tutorials-in-development/R/mdp-download-and-explore.Rmd
@@ -25,7 +25,7 @@ not retrieved from the NEON Data Portal. Rather, data are accessed directly from
 a Google Cloud Storage bucket with a more complex directory structure than data
 packages downloaded from the Portal. This tutorial will show a user how to 
 download the data from the bucket to a local data store and load it into the R 
-computing environment for exploration, proving entry points to other NEON 
+computing environment for exploration, providing entry points to other NEON 
 tutorials which initially rely on data retrieval from the Portal. This tutorial
 will end with instructions to write the data loaded into the R environment to 
 .csv format should the user desire to work with the data in another application 
@@ -80,7 +80,7 @@ Exchange data, which will be downloaded in a separate section below.
 Change the bucket in the code below to the bucket set up for your MDP data, 
 then run this section once to download all existing IS data from the bucket.
 Note that the code will error if data have already been downloaded. 
-To retrieve new data each month, see "get new data" section below.
+To retrieve new data each month, see the "get new data" section below.
 
 ```{r download-is-data}
 
@@ -110,7 +110,7 @@ saat <- stackFromStore(dpID='DP1.00002.001', filepaths=getwd(), site='all',
 
 # Relative Humidity
 rh <- stackFromStore(dpID='DP1.00098.001', filepaths=getwd(), site='all',
-                     startdate=NA, enddate=NA, package='expanded')
+                     startdate=NA, enddate=NA, package='basic')
 
 # Water Quality
 wq <- stackFromStore(dpID='DP1.20288.001', filepaths=getwd(), site='all',
@@ -122,8 +122,8 @@ along with other tables containing metadata.
 
 ```{r list-is-data}
 
-# 30-minute single-aspirated air temperature
-saat$SAAT_30min
+# 30-minute single-aspirated air temperature (1st 10 rows)
+saat$SAAT_30min[1:10,]
 
 # variable descriptions for the single-aspirated air temperature data
 saat$variables_00002
@@ -136,7 +136,7 @@ Now we will download all Surface-Atmosphere Exchange (SAE) data from the GCS buc
 Change the bucket in the code below to the bucket set up for your MDP data, 
 then run this section once to download all existing SAE data from the bucket.
 Note that the code will error if data have already been downloaded. 
-To retrieve new data each month, see "get new data" section below.
+To retrieve new data each month, see the "get new data" section below.
 
 ```{r download-sae-data}
 
@@ -148,10 +148,10 @@ downloadMDP('ods/dataproducts/DP4')
 ## Stack SAE Data 
 
 The following code will stack (compile) SAE products providing a complete 
-time-series at the MDP site downloaded. The `stackFromStore` function utilizes
+time-series for the downloaded MDP site. The `stackFromStore` function utilizes
 the `stackEddy` function which is described in great detail in the 
 <a href="https://www.neonscience.org/eddy-data-intro" target="_blank">Introduction to working with NEON eddy flux data</a>. 
-The MDP data files are in the same format as described in the tutorial, below we
+The MDP data files are in the same format as described in the tutorial.  Below we
 show examples of stacking the Level 4 flux data and Level 1 isotopic ratios.
 
 If there are data from more than one site in the working directory, change 
@@ -164,7 +164,7 @@ MDP site code (e.g. "MD04") that you want to explore. See the Help page for the 
 flux <- stackFromStore(dpID='DP4.00200.001', filepaths=paste(getwd(), 'ods', sep='/'), 
                        site='all', startdate=NA, enddate=NA, package='basic', level='dp04')
 
-# isotope data
+# CO2 isotope data
 iso <- stackFromStore(dpID='DP4.00200.001', filepaths=paste(getwd(), 'ods', sep='/'), site='all',
                       startdate=NA, enddate=NA, package='basic', 
                       level='dp01', timeIndex=30, var='dlta13CCo2')
@@ -178,6 +178,9 @@ variables.
 
 # flux data variables
 flux$variables
+
+# CO2 isotope data (1st 10 rows)
+iso$MD04[1:10,]
 
 ```
 
@@ -200,7 +203,7 @@ updateMDP('ods/dataproducts/DP4')
 After stacking the IS data, you can transfer to the 
 <a href="https://www.neonscience.org/resources/learning-hub/tutorials/get-started-neon-data-series-data-tutorials#jump-70" target="_blank">Explore Temperature data</a> section in the Get Started with NEON Data series of tutorials. The tutorial guides you through the data and metadata contents of the list output from the `stackFromStore` function for IS products, including how to interpret quality flags as well as do basic plotting and manipulation of data tables. 
 
-There are several SAE related tutorials, we feel the aforementioned 
+There are several SAE related tutorials. The aforementioned 
 <a href="https://www.neonscience.org/eddy-data-intro" target="_blank">Introduction to working with NEON eddy flux data</a> is
 a great starting point. Another tutorial that may be of interest is the
 <a href="https://www.neonscience.org/eddy-diel-cycle" target="_blank"> Exploring diel carbon flux cycles</a>, which provides 
@@ -217,8 +220,7 @@ write.csv(saat$SAAT_30min, file="SAAT_30min_stacked.csv", row.names=F)
 
 ```
 
-Writing out the stacked SAE data to .csv is similarly easy. The following example code will write the 30-minute CO<sub>2</sub> isotope data to file. Change the "MD04" site code to the 4-character 
-site code for your MDP. 
+Writing out the stacked SAE data to .csv is similarly easy. The following example code will write the 30-minute CO<sub>2</sub> isotope data to file. Change the "MD04" site code in `iso$MD04` in the code below to the 4-character site code for your MDP. 
 
 ```{r write-sae-to-csv}
 
